cmake_minimum_required(VERSION 3.30)
project(ClassExamples)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(hello_world)
add_subdirectory(echo)
add_subdirectory(best_practices)
add_subdirectory(command_line)
add_subdirectory(stringstream)
add_subdirectory(pointers)
add_subdirectory(vectors)
add_subdirectory(linked_list)
add_subdirectory(smart_pointer)
add_subdirectory(queue)